help text update Files modified - [EditForm]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -192,7 +192,7 @@
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn57" padding="unset 1em unset unset">
                                                                 <wm-form-field name="allowOwnerToCompleteWork" displayname="Allow Owner to Complete Work" show="true" primary-key="false" generator="assigned" key="allowOwnerToCompleteWork" type="boolean" readonly="false"
                                                                 required="false" widget="checkbox" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.requireOwner.datavalue || Widgets.liveformUpdateFormType.formWidgets.selectVendorOption.displayValue==='None'"
-                                                                hint="When enabled, users will be able to specify that the property owner is completing the work associated with the form, instead of selecting a registered contractor. &quot;Require GIS Record&quot;, &quot;Require Owner&quot;, and &quot;Require Contractor&quot; must be active to use this setting."></wm-form-field>
+                                                                hint="When enabled, users will be able to specify that the property owner is completing the work associated with the form, instead of selecting a registered contractor. &quot;Require Location&quot;, &quot;Require Owner&quot;, and &quot;Require Contractor&quot; must be active to use this setting."></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn56" padding="unset 1em unset unset"></wm-gridcolumn>
                                                         </wm-gridrow>
