--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -51,7 +51,7 @@
                                 <wm-gridrow name="gridrow117">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn216"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn217" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" caption="bind:&quot;Expires: [&quot;+(Variables.CurrentForm.firstRecord.expiresDate | toDate: 'MM-dd-yyyy') +&quot;]&quot;" margin="0px unset" name="label145"></wm-label>
+                                        <wm-label padding="unset 0.5em" caption="bind:&quot;Expires: &quot;+(Variables.CurrentForm.firstRecord.expiresDate | toDate: 'MM-dd-yyyy')" margin="0px unset" name="label145" class="text-danger"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn218"></wm-gridcolumn>
                                 </wm-gridrow>
