--- a/src/main/webapp/pages/CompanyForms/CompanyForms.html
+++ b/src/main/webapp/pages/CompanyForms/CompanyForms.html
@@ -7,7 +7,7 @@
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
-                        <wm-breadcrumb dataset="bind:Variables.Breadcrumb.dataSet" name="breadcrumb1"></wm-breadcrumb>
+                        <wm-breadcrumb dataset="bind:Variables.Breadcrumb.dataSet" name="breadcrumb1" on-beforenavigate="breadcrumb1Beforenavigate($isolateScope, $item)"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
