--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -146,9 +146,13 @@
                                 </wm-tabpane>
                                 <wm-tabpane name="tabpaneLocation" title="LOCATION" show="bind:Variables.lvFormType.dataSet.data[$i].gisrecord">
                                     <wm-layoutgrid name="layoutgrid17">
+                                        <wm-gridrow name="gridrow121">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn222_1">
+                                                <wm-label padding="unset 0.5em" name="label29" caption="The following locations have been associated with this form."></wm-label>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
                                         <wm-gridrow name="gridrow60">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn125">
-                                                <wm-label padding="unset 0.5em" name="label29" caption="The following locations have been associated with this form."></wm-label>
                                                 <wm-grid title="" dataset="bind:Variables.Gis2formsData.dataSet" navigation="Classic" name="gridLocation" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
                                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
                                                     <wm-grid-column binding="gisrecords.parcel" caption="Parcel" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
@@ -158,10 +162,10 @@
                                                     <wm-grid-column binding="gisrecords.streetNumber" caption="Street Number" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                     <wm-grid-column binding="gisrecords.streetName" caption="Street Name" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                     <wm-grid-column binding="gisrecords.city" caption="City" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
-                                                    <wm-grid-column binding="gisrecords.inspectionZone" caption="Inspection Zone" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
+                                                    <wm-grid-column binding="gisrecords.inspectionZone" caption="Inspection Zone" type="string" readonly="true" edit-widget-type="text" show="bind:Variables.lvFormType.dataSet.data[$i].inspections"></wm-grid-column>
                                                     <wm-grid-action key="customButton" display-name="Add Location" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Location" action="Widgets.dialogAddGISRecord.open()"
                                                     shortcutkey="" disabled="bind:(!Variables.lvFormType.dataSet.data[$i].multipleGisrecords &amp;&amp; Variables.Gis2formsData.dataSet.totalElements >0) || !Variables.svUserPermissions.dataSet.canEdit"></wm-grid-action>
-                                                    <wm-grid-row-action key="customRow2" display-name="" show="true" class="btn-transparent" iconclass="wi wi-edit" title="Manage Details" action="Widgets.dialogManageGISDetails.open()"
+                                                    <wm-grid-row-action key="customRow2" display-name="" show="true" class="btn-transparent" iconclass="wi wi-view-list" title="Manage Details" action="Widgets.dialogManageGISDetails.open()"
                                                     accessroles="CXAdmin,MunicipalityEmployee,MunicipalityAdmin" disabled="false"></wm-grid-row-action>
                                                     <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Details" action="Widgets.dialogParcel.open()" disabled="false"></wm-grid-row-action>
                                                     <wm-grid-row-action key="customRow1" display-name="" show="bind:Variables.svUserPermissions.dataSet.canEdit" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.dialogDeleteGISRecordConf.open()"
@@ -1308,7 +1312,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="viewManageGISDetails">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="GISDetails" iconclass="wi wi-edit-location" name="dialogManageGISDetails" width="80%" on-close="Variables.Gis2formsData.invoke()">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Location Details" iconclass="wi wi-view-list" name="dialogManageGISDetails" on-close="Variables.Gis2formsData.invoke()" class="modal-larger">
             <wm-dialogactions name="dialogactions14">
                 <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button28"></wm-button>
             </wm-dialogactions>
