--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -7,44 +7,44 @@
             <wm-layoutgrid name="layoutgrid1" columns="3">
                 <wm-gridrow name="gridrow3">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn5" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageSubscriptions.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_ManageSubscriptions.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid3">
                                 <wm-gridrow height="100%" name="gridrow6">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn13" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-library-add"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn14" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Subscriptions" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.userSubscriptionsCount.dataSet[$i].userSubscriptionsCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="CX Subscriptions" class="p tilehover" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.userSubscriptionsCount.dataSet[$i].userSubscriptionsCount" fontsize="3" fontunit="em" class="p tilehover"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn6" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageUsers.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_ManageUsers.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid4">
                                 <wm-gridrow height="100%" name="gridrow7">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn15" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-people"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn16" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Users" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.UsersCount.dataSet[$i].usersCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="CX Users" class="p tilehover" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.UsersCount.dataSet[$i].usersCount" fontsize="3" fontunit="em" class="p tilehover"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn7" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageRoles.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_ManageRoles.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid8">
                                 <wm-gridrow height="100%" name="gridrow10">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn22" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-contacts"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" name="gridcolumn23" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Roles" class="p" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileTitle" caption="CX Roles" class="p tilehover" fontsize="1.4" fontunit="em"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -53,45 +53,45 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow4">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn8" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageMunicipalities.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_ManageMunicipalities.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid2">
                                 <wm-gridrow height="100%" name="gridrow5">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn11" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-account-balance"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn12" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Municipalities" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.MunicipalitiesCount.dataSet[$i].municipalitiesCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="CX Municipalities" class="p tilehover" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.MunicipalitiesCount.dataSet[$i].municipalitiesCount" fontsize="3" fontunit="em" class="p tilehover"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn10" padding="2em unset" horizontalalign="center">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageCompanies.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_ManageCompanies.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid9">
                                 <wm-gridrow height="100%" name="gridrow11">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn24" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-work"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn25" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Companies" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.VendorCount.dataSet[$i].VendorCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="CX Companies" class="p tilehover" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.VendorCount.dataSet[$i].VendorCount" fontsize="3" fontunit="em" class="p tilehover"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn9" padding="2em unset" horizontalalign="center">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageProjects.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_ManageProjects.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid10">
                                 <wm-gridrow height="100%" name="gridrow12">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn26" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-building"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Projects" class="p" fontsize="1.4" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.svCountOfCXProjects.firstRecord._count" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="CX Projects" class="p tilehover" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.svCountOfCXProjects.firstRecord._count" fontsize="3" fontunit="em" class="p tilehover"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -100,29 +100,29 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn19" horizontalalign="center" padding="2em unset">
-                        <wm-tile width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_CXCodeSets.invoke()" name="tile11">
+                        <wm-tile width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_CXCodeSets.invoke()" name="tile11">
                             <wm-layoutgrid height="100%" name="layoutgrid12">
                                 <wm-gridrow height="100%" name="gridrow15">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn33">
                                         <wm-icon iconsize="3em" iconclass="wi wi-hammer" name="icon11"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn34">
-                                        <wm-label caption="Global Code Sets" class="p" fontsize="1.4" fontunit="em" name="label20"></wm-label>
-                                        <wm-label caption="bind:Variables.svCountOfCXCodeSetsGlobal.dataSet[$i]._count" fontsize="3" fontunit="em" class="p" name="label21"></wm-label>
+                                        <wm-label caption="Global Code Sets" class="p tilehover" fontsize="1.4" fontunit="em" name="label20"></wm-label>
+                                        <wm-label caption="bind:Variables.svCountOfCXCodeSetsGlobal.dataSet[$i]._count" fontsize="3" fontunit="em" class="p tilehover" name="label21"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn20" horizontalalign="center" padding="2em unset">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile6" on-click="Variables.goToPage_CXGlobalSettings.invoke()">
+                        <wm-tile width="240px" height="160px" class="bg-primary tilehover" name="tile6" on-click="Variables.goToPage_CXGlobalSettings.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid7">
                                 <wm-gridrow height="100%" name="gridrow8">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn17">
                                         <wm-icon iconsize="3em" iconclass="wi wi-settings" name="icon6"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn18">
-                                        <wm-label caption="Global Settings" class="p" fontsize="1.4" fontunit="em" name="label11"></wm-label>
+                                        <wm-label caption="Global Settings" class="p tilehover" fontsize="1.4" fontunit="em" name="label11"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
