--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -17,44 +17,44 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn3" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Widgets.dialogNewForm.open()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Widgets.dialogNewForm.open()">
                             <wm-layoutgrid height="100%" name="layoutgrid9">
                                 <wm-gridrow height="100%" name="gridrow12">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn26" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-note-add"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Submit Form" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileTitle" caption="Submit Form" class="p tilehover" fontsize="1.5" fontunit="em"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn4" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_UserOpenForms.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_UserOpenForms.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid2">
                                 <wm-gridrow height="100%" name="gridrow3">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn6" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-book-open"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn7" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Open Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfOpenFormsForUser.firstRecord.formsCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="Open Forms" class="p tilehover" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfOpenFormsForUser.firstRecord.formsCount" fontsize="3" fontunit="em" class="p tilehover"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn5" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_UserClosedForms.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_UserClosedForms.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid3">
                                 <wm-gridrow height="100%" name="gridrow4">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn8" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-book-binder"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn9" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Closed Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfClosedFormsForUser.firstRecord.formsCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="Closed Forms" class="p tilehover" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfClosedFormsForUser.firstRecord.formsCount" fontsize="3" fontunit="em" class="p tilehover"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -63,44 +63,44 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow6">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn12" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MyFees.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_MyFees.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid4">
                                 <wm-gridrow height="100%" name="gridrow5">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn10" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-attach-money"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn11" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="My Fees" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.svFeeCountForUser.firstRecord.feeSum||'0'" fontsize="2" fontunit="em" class="p" padding="0.5em unset unset unset"></wm-label>
+                                        <wm-label name="tileTitle" caption="My Fees" class="p tilehover" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.svFeeCountForUser.firstRecord.feeSum||'0'" fontsize="2" fontunit="em" class="p tilehover" padding="0.5em unset unset unset"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tilePayHist" on-click="Variables.goToPage_PaymentHistory.invoke()" show="true">
+                        <wm-tile width="240px" height="160px" class="bg-primary tilehover" name="tilePayHist" on-click="Variables.goToPage_PaymentHistory.invoke()" show="true">
                             <wm-layoutgrid height="100%" name="layoutgrid8">
                                 <wm-gridrow height="100%" name="gridrow11">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn24" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-receipt"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" name="gridcolumn25" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Payment History" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileTitle" caption="Payment History" class="p tilehover" fontsize="1.5" fontunit="em"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn14" padding="2em unset" horizontalalign="center">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MyProjects.invoke()">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary tilehover" on-click="Variables.goToPage_MyProjects.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid6">
                                 <wm-gridrow height="100%" name="gridrow8">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn17" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-building"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn18" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="My Projects" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfAllProjectsForUsersAndSharedWith.firstRecord.projectsCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="My Projects" class="p tilehover" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfAllProjectsForUsersAndSharedWith.firstRecord.projectsCount" fontsize="3" fontunit="em" class="p tilehover"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -109,14 +109,14 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn22" padding="1em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile9" on-click="Variables.goToPage_VendorApplication.invoke()" show="bind:Variables.AdminVendorsList.dataSet.content.length === 0" accessroles="Everyone">
+                        <wm-tile width="240px" height="160px" class="bg-primary tilehover" name="tile9" on-click="Variables.goToPage_VendorApplication.invoke()" show="bind:Variables.AdminVendorsList.dataSet.content.length === 0" accessroles="Everyone">
                             <wm-layoutgrid height="100%" name="layoutgrid10">
                                 <wm-gridrow height="100%" name="gridrow13">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn28">
                                         <wm-icon iconsize="3em" iconclass="wi wi-work" name="icon9"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn29">
-                                        <wm-label caption="Contractor Application" class="p" fontsize="1.5" fontunit="em" name="label22"></wm-label>
+                                        <wm-label caption="Contractor Application" class="p tilehover" fontsize="1.5" fontunit="em" name="label22"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
