--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -55,15 +55,15 @@
                                                 </wm-gridrow>
                                                 <wm-gridrow name="gridrow27">
                                                     <wm-gridcolumn columnwidth="4" name="gridcolumn33">
-                                                        <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" readonly="false" required="false" widget="select" placeholder="Select value"
+                                                        <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" readonly="false" required="true" widget="select" placeholder="Select value"
                                                         displayexpression="stateName" orderby="stateName:asc"></wm-form-field>
                                                     </wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="4" name="gridcolumn34">
-                                                        <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" readonly="false" required="false" widget="text" maxchars="255"
+                                                        <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" readonly="false" required="true" widget="text" maxchars="255"
                                                         inputtype="text" placeholder="Enter value"></wm-form-field>
                                                     </wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="4" name="gridcolumn35">
-                                                        <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
+                                                        <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" readonly="false" required="true" widget="text" maxchars="255" inputtype="text"
                                                         placeholder="Enter value" defaultvalue="USA"></wm-form-field>
                                                     </wm-gridcolumn>
                                                 </wm-gridrow>
